139 - fixed sonar and after code review