@@ -26,6 +26,7 @@ import java.io.File;
 import java.util.List;
 
 import static com.febfes.fftmback.integration.AuthenticationControllerTest.*;
+import static com.febfes.fftmback.util.FileUtils.USER_PIC_URN;
 import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.equalTo;
 
@@ -158,7 +159,7 @@ class UserControllerTest extends BasicTestClass {
                 .response()
                 .as(UserDto.class);
         Assertions.assertNotNull(userDto.userPic());
-        Assertions.assertEquals("/files/user-pic/%d".formatted(userId), userDto.userPic());
+        Assertions.assertEquals(String.format(USER_PIC_URN, userId), userDto.userPic());
     }
 
     @Test
@@ -170,8 +171,11 @@ class UserControllerTest extends BasicTestClass {
                 .delete("/api/v1/files/user-pic/{userId}", userId)
                 .then()
                 .statusCode(HttpStatus.SC_OK);
-        Assertions.assertThrows(EntityNotFoundException.class,
-                () -> fileService.getFile("/files/user-pic/%d".formatted(userId)));
+        String userPicUrn = String.format(USER_PIC_URN, userId);
+        Assertions.assertThrows(
+                EntityNotFoundException.class,
+                () -> fileService.getFile(userPicUrn)
+        );
     }
 
 
